all the changes done

--- a/Sdk/src/main/res/layout/fragment_add_u_p_i_i_d.xml
+++ b/Sdk/src/main/res/layout/fragment_add_u_p_i_i_d.xml
@@ -23,8 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Payment methods"
+            android:fontFamily="@font/poppins_bold"
+            android:text="Payment Methods"
             android:textColor="#2D2B32"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
             android:layout_height="36dp"
             android:orientation="vertical"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:gravity="center">
@@ -85,7 +85,7 @@
                     android:layout_marginStart="5dp"
                     android:fontFamily="@font/poppins_bold"
                     android:gravity="center"
-                    android:text="Enter UPI ID"
+                    android:text="Add UPI ID"
                     android:textColor="#2D2B32"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -113,7 +113,7 @@
                     android:background="@drawable/edittext_bg"
                     android:fontFamily="@font/poppins"
                     android:gravity="center_vertical"
-                    android:hint="Enter UPI ID"
+                    android:hint="Enter UPI Id"
                     android:inputType="text"
                     android:padding="8dp"
                     android:textColorHint="#7F7D83"
@@ -237,7 +237,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:fontFamily="@font/poppins_semibold"
-                    android:text="Verify and Proceed Payment"
+                    android:text="Proceed"
                     android:textColor="#ADACB0"
                     android:textSize="16sp" />
 
