--- a/Sdk/src/main/res/layout/fragment_wallet_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_wallet_bottom_sheet.xml
@@ -23,8 +23,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:fontFamily="@font/poppins_medium"
-                android:text="Payment methods"
+                android:fontFamily="@font/poppins_bold"
+                android:text="Payment Methods"
                 android:textColor="#2D2B32"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +36,7 @@
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +102,7 @@
                         android:iconifiedByDefault="false"
                         android:queryBackground="@null"
                         android:textColor="#000000"
-                        android:queryHint="Search for wallets"
+                        android:queryHint="Search Wallets"
                         android:searchIcon="@drawable/searchicon"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -162,27 +162,19 @@
                                     android:layout_marginEnd="16dp"
                                     >
 
-                                    <RelativeLayout
-                                        android:id="@+id/popularItemRelativeLayout1"
-                                        android:layout_width="50dp"
-                                        android:layout_height="50dp"
-                                        android:background="@drawable/loading_state"
+                                    <ImageView
+                                        android:id="@+id/popularWalletImageView1"
+                                        android:layout_width="32dp"
+                                        android:layout_height="32dp"
+                                        android:layout_centerInParent="true"
+                                        android:background="#FFFFFF"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent">
+                                        app:layout_constraintTop_toTopOf="parent" />
 
-                                        <ImageView
-                                            android:id="@+id/popularWalletImageView1"
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:layout_centerInParent="true"
-                                            app:layout_constraintEnd_toEndOf="parent"
-                                            app:layout_constraintStart_toStartOf="parent"
-                                            app:layout_constraintTop_toTopOf="parent" />
-                                    </RelativeLayout>
                                     <TextView
                                         android:id="@+id/popularWalletsNameTextView1"
-                                        android:layout_width="match_parent"
+                                        android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:gravity="center"
                                         android:maxLines="1"
@@ -193,7 +185,7 @@
                                         app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toBottomOf="@+id/popularItemRelativeLayout1"/>
+                                        app:layout_constraintTop_toBottomOf="@+id/popularWalletImageView1"/>
 
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -204,28 +196,19 @@
                                     android:layout_height="match_parent"
                                     android:layout_marginEnd="16dp">
 
-                                    <RelativeLayout
-                                        android:id="@+id/popularItemRelativeLayout2"
-                                        android:layout_width="50dp"
-                                        android:layout_height="50dp"
-                                        android:background="@drawable/loading_state"
+                                    <ImageView
+                                        android:id="@+id/popularWalletImageView2"
+                                        android:layout_width="32dp"
+                                        android:layout_height="32dp"
+                                        android:layout_centerInParent="true"
+                                        android:background="#FFFFFF"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent">
-
-                                        <ImageView
-                                            android:id="@+id/popularWalletImageView2"
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:layout_centerInParent="true"
-                                            app:layout_constraintEnd_toEndOf="parent"
-                                            app:layout_constraintStart_toStartOf="parent"
-                                            app:layout_constraintTop_toTopOf="parent" />
-                                    </RelativeLayout>
+                                        app:layout_constraintTop_toTopOf="parent" />
 
                                         <TextView
                                             android:id="@+id/popularWalletsNameTextView2"
-                                            android:layout_width="match_parent"
+                                            android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:gravity="center"
                                             android:maxLines="1"
@@ -236,7 +219,7 @@
                                             app:layout_constraintBottom_toBottomOf="parent"
                                             app:layout_constraintEnd_toEndOf="parent"
                                             app:layout_constraintStart_toStartOf="parent"
-                                            app:layout_constraintTop_toBottomOf="@+id/popularItemRelativeLayout2"/>
+                                            app:layout_constraintTop_toBottomOf="@+id/popularWalletImageView2"/>
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -245,27 +228,18 @@
                                     android:layout_height="match_parent"
                                     android:layout_marginEnd="16dp">
 
-                                    <RelativeLayout
-                                        android:id="@+id/popularItemRelativeLayout3"
-                                        android:layout_width="50dp"
-                                        android:layout_height="50dp"
-                                        android:background="@drawable/loading_state"
+                                    <ImageView
+                                        android:id="@+id/popularWalletImageView3"
+                                        android:layout_width="32dp"
+                                        android:layout_height="32dp"
+                                        android:layout_centerInParent="true"
+                                        android:background="#FFFFFF"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent">
-
-                                        <ImageView
-                                            android:id="@+id/popularWalletImageView3"
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:layout_centerInParent="true"
-                                            app:layout_constraintEnd_toEndOf="parent"
-                                            app:layout_constraintStart_toStartOf="parent"
-                                            app:layout_constraintTop_toTopOf="parent" />
-                                    </RelativeLayout>
+                                        app:layout_constraintTop_toTopOf="parent" />
                                     <TextView
                                         android:id="@+id/popularWalletsNameTextView3"
-                                        android:layout_width="match_parent"
+                                        android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:gravity="center"
                                         android:maxLines="1"
@@ -276,7 +250,7 @@
                                         app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toBottomOf="@+id/popularItemRelativeLayout3"/>
+                                        app:layout_constraintTop_toBottomOf="@+id/popularWalletImageView3"/>
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -286,25 +260,18 @@
                                     android:layout_height="match_parent"
                                     android:layout_marginEnd="16dp">
 
-                                    <RelativeLayout
-                                        android:id="@+id/popularItemRelativeLayout4"
-                                        android:layout_width="50dp"
-                                        android:layout_height="50dp"
-                                        android:background="@drawable/loading_state"
-
+                                    <ImageView
+                                        android:id="@+id/popularWalletImageView4"
+                                        android:layout_width="32dp"
+                                        android:layout_height="32dp"
+                                        android:layout_centerInParent="true"
+                                        android:background="#FFFFFF"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent">
-
-                                        <ImageView
-                                            android:id="@+id/popularWalletImageView4"
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:layout_centerInParent="true" />
-                                    </RelativeLayout>
+                                        app:layout_constraintTop_toTopOf="parent" />
                                     <TextView
                                         android:id="@+id/popularWalletsNameTextView4"
-                                        android:layout_width="match_parent"
+                                        android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:gravity="center"
                                         android:maxLines="1"
@@ -315,7 +282,7 @@
                                         app:layout_constraintBottom_toBottomOf="parent"
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toBottomOf="@+id/popularItemRelativeLayout4"/>
+                                        app:layout_constraintTop_toBottomOf="@+id/popularWalletImageView4"/>
                                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
