--- a/Sdk/src/main/res/drawable/dashed_line.xml
+++ b/Sdk/src/main/res/drawable/dashed_line.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="line">
     <stroke
-        android:color="#F5F5F5"
+        android:color="#7F7D83"
         android:dashWidth="10dp"
         android:dashGap="10dp"
         android:width="1dp"/>
