--- a/Sdk/src/main/res/layout/fragment_add_card_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_add_card_bottom_sheet.xml
@@ -29,8 +29,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:fontFamily="@font/poppins_medium"
-                    android:text="Payment methods"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text="Payment Methods"
                     android:textColor="#2D2B32"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:orientation="vertical"
                     app:layout_constraintStart_toStartOf="parent"
@@ -315,7 +315,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
-                            android:layout_marginTop="12dp"
+                            android:layout_marginTop="4dp"
                             android:fontFamily="@font/poppins"
                             android:gravity="center_vertical"
                             android:lineSpacingExtra="-1sp"
