--- a/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -32,8 +32,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:fontFamily="@font/poppins_medium"
-                android:text="Payment methods"
+                android:fontFamily="@font/poppins_bold"
+                android:text="Payment Methods"
                 android:textColor="#2D2B32"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
@@ -57,10 +57,6 @@
                     android:src="@drawable/chevron_left" />
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="200dp" />-->
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -137,7 +133,8 @@
                                 android:fontFamily="@font/inter_semibold"
                                 android:textColor="@android:color/black"
                                 android:textSize="16sp"
-                                android:layout_marginEnd="4dp"                                app:layout_constraintBottom_toTopOf="@+id/itemsInOrderRecyclerView"
+                                android:layout_marginEnd="4dp"
+                                app:layout_constraintBottom_toTopOf="@+id/itemsInOrderRecyclerView"
                                 app:layout_constraintEnd_toStartOf="@+id/arrowIcon"
                                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -293,7 +290,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentStart="true"
-                                    android:fontFamily="@font/poppins"
+                                    android:fontFamily="@font/poppins_bold"
                                     android:text="Total"
                                     android:textColor="#010102"
                                     android:textSize="12sp"
@@ -362,7 +359,7 @@
                             <View
                                 android:id="@+id/dashedLine4"
                                 android:layout_width="match_parent"
-                                android:layout_height="2dp"
+                                android:layout_height="4dp"
                                 android:background="@drawable/dashed_line"
                                 android:layout_marginTop="8dp"
                                 app:layout_constraintTop_toBottomOf="@+id/textView2"
@@ -374,11 +371,10 @@
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
                                 android:layout_marginStart="14dp"
-                                android:src="@drawable/home_icon"
                                 android:layout_marginTop="12dp"
-                                app:layout_constraintTop_toBottomOf="@+id/dashedLine4"
+                                android:src="@drawable/home_icon"
                                 app:layout_constraintStart_toStartOf="parent"
-                                 />
+                                app:layout_constraintTop_toBottomOf="@+id/dashedLine4" />
 
                             <TextView
                                 android:id="@+id/nameTextView"
@@ -402,46 +398,30 @@
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toBottomOf="@id/dashedLine4" />
 
-
-                            <TextView
-                                android:id="@+id/mobileNumberTV"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="2dp"
-                                android:fontFamily="@font/poppins"
-                                android:text="Mobile : "
-                                android:textColor="#7F7D83"
-                                android:textSize="14sp"
-                                android:textStyle="bold"
-                                app:layout_constraintStart_toStartOf="@+id/nameTextView"
-                                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
-
                             <TextView
                                 android:id="@+id/mobileNumberTextViewMain"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/poppins_medium"
-                                android:text="+91-1234567890"
+                                android:paddingStart="4dp"
+                                android:text="(+911234567890)"
                                 android:textColor="#010102"
-                                app:layout_constraintStart_toEndOf="@+id/mobileNumberTV"
-                                app:layout_constraintTop_toTopOf="@+id/mobileNumberTV"
-                                app:layout_constraintBottom_toBottomOf="@+id/mobileNumberTV"/>
+                                app:layout_constraintBottom_toBottomOf="@+id/nameTextView"
+                                app:layout_constraintStart_toEndOf="@+id/nameTextView"
+                                app:layout_constraintTop_toTopOf="@+id/nameTextView" />
 
                             <TextView
                                 android:id="@+id/addressTextViewMain"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/poppins"
+                                android:gravity="start|center_vertical"
                                 android:text="123 Lorem ipsum lorem ipsum\nlorem ipsum lorem ipsum\nGurgaon, Haryana,12001"
                                 android:textColor="#7F7D83"
-                                android:layout_marginTop="4dp"
                                 android:textSize="12sp"
-                                android:gravity="start|center_vertical"
                                 android:textStyle="bold"
-                                app:layout_constraintTop_toBottomOf="@+id/mobileNumberTV"
-                                app:layout_constraintStart_toStartOf="@+id/mobileNumberTV" />
-
-
+                                app:layout_constraintStart_toStartOf="@+id/nameTextView"
+                                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
 
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -455,8 +435,8 @@
                         android:layout_marginTop="16dp"
                         android:fontFamily="@font/poppins"
                         android:text="Choose payment method"
-                        android:visibility="visible"
                         android:textColor="#0A090B"
+                        android:visibility="visible"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/cardView8" />
 
@@ -816,6 +796,7 @@
                                         app:layout_constraintStart_toStartOf="parent"
                                         app:layout_constraintTop_toTopOf="parent"
                                         app:srcCompat="@drawable/qr_code_icon" />
+
                                     <TextView
                                         android:id="@+id/textView46"
                                         android:layout_width="wrap_content"
@@ -828,6 +809,7 @@
                                         app:layout_constraintBottom_toBottomOf="@+id/imageView25"
                                         app:layout_constraintStart_toEndOf="@+id/imageView25"
                                         app:layout_constraintTop_toTopOf="@+id/imageView25" />
+
                                     <ImageView
                                         android:id="@+id/imageView23"
                                         android:layout_width="wrap_content"
@@ -836,12 +818,13 @@
                                         app:layout_constraintEnd_toEndOf="parent"
                                         app:layout_constraintTop_toTopOf="@+id/textView46"
                                         app:srcCompat="@drawable/grey_color_right_arrow" />
+
                                     <androidx.constraintlayout.widget.ConstraintLayout
                                         android:id="@+id/qrCodeOpenConstraint"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        app:layout_constraintTop_toBottomOf="@+id/textView46"
-                                        android:visibility="gone">
+                                        android:visibility="gone"
+                                        app:layout_constraintTop_toBottomOf="@+id/textView46">
 
                                         <ImageView
                                             android:id="@+id/qrCodeImageView"
@@ -857,15 +840,15 @@
                                             android:id="@+id/refreshButton"
                                             android:layout_width="100dp"
                                             android:layout_height="30dp"
+                                            android:background="@drawable/button_bg"
+                                            android:fontFamily="@font/poppins_semibold"
+                                            android:gravity="center"
+                                            android:text="Refresh"
+                                            android:visibility="gone"
                                             app:layout_constraintBottom_toBottomOf="parent"
                                             app:layout_constraintEnd_toEndOf="@+id/qrCodeImageView"
                                             app:layout_constraintStart_toStartOf="@+id/qrCodeImageView"
-                                            app:layout_constraintTop_toTopOf="@+id/qrCodeImageView"
-                                            android:background="@drawable/button_bg"
-                                            android:text="Refresh"
-                                            android:gravity="center"
-                                            android:visibility="gone"
-                                            android:fontFamily="@font/poppins_semibold"/>
+                                            app:layout_constraintTop_toTopOf="@+id/qrCodeImageView" />
 
                                         <TextView
                                             android:id="@+id/textView49"
@@ -894,11 +877,11 @@
                                             android:id="@+id/qrCodeTimer"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
-                                            android:fontFamily="@font/poppins_medium"
                                             android:layout_marginTop="8dp"
+                                            android:fontFamily="@font/poppins_medium"
                                             android:textColor="#b9222f"
                                             app:layout_constraintStart_toStartOf="@+id/textView44"
-                                            app:layout_constraintTop_toBottomOf="@+id/textView44"/>
+                                            app:layout_constraintTop_toBottomOf="@+id/textView44" />
                                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -930,9 +913,9 @@
                             android:layout_height="wrap_content"
                             android:background="#FFFFFF"
                             android:paddingTop="12dp"
-                            android:visibility="visible"
                             android:paddingEnd="12dp"
-                            android:paddingBottom="12dp">
+                            android:paddingBottom="12dp"
+                            android:visibility="visible">
 
                             <ImageView
                                 android:id="@+id/imageView16"
@@ -1099,10 +1082,10 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="#FFFFFF"
-                            android:visibility="visible"
                             android:paddingTop="12dp"
                             android:paddingEnd="12dp"
-                            android:paddingBottom="12dp">
+                            android:paddingBottom="12dp"
+                            android:visibility="visible">
 
                             <ImageView
                                 android:id="@+id/imageView37"
@@ -1244,20 +1227,22 @@
 
                     </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <RelativeLayout
                     android:id="@+id/loadingRelativeLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:visibility="gone"
-                    android:background="#FFFFFF">
+                    android:background="#FFFFFF"
+                    android:visibility="gone">
 
                     <com.airbnb.lottie.LottieAnimationView
                         android:id="@+id/boxpayLogoLottie"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="32dp"
                         android:layout_centerInParent="true"
+                        android:layout_marginTop="32dp"
                         app:lottie_fileName="boxpayLogo.json" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
