added others icon and its functionality

--- a/Sdk/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
@@ -24,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:fontFamily="@font/poppins_medium"
+                android:fontFamily="@font/poppins_bold"
                 android:text="Payment methods"
                 android:textColor="#2D2B32"
                 android:textSize="16sp"
@@ -37,7 +37,7 @@
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
