--- a/Sdk/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
@@ -64,7 +64,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
-                app:layout_constraintBottom_toTopOf="@id/proceedButton">
+                app:layout_constraintBottom_toTopOf="@id/proceedButton"
+                app:layout_constrainedHeight="true">
 
                 <androidx.core.widget.NestedScrollView
                     android:layout_width="match_parent"
