--- a/Sdk/src/main/res/layout/fragment_add_card_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_add_card_bottom_sheet.xml
@@ -81,11 +81,11 @@
                             android:id="@+id/nameOnCard"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="14dp"
+                            android:layout_marginTop="2dp"
                             android:fontFamily="@font/poppins"
                             android:gravity="center_vertical"
                             android:lineSpacingExtra="-1sp"
-                            android:text="Name on card"
+                            android:text="Name on card*"
                             android:textColor="#2D2B32"
                             app:layout_constraintStart_toStartOf="@+id/linearLayout3"
                             app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
@@ -143,7 +143,7 @@
                             android:id="@+id/linearLayout3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="14dp"
+                            android:layout_marginTop="2dp"
                             android:orientation="vertical"
                             app:layout_constraintStart_toStartOf="@+id/cardNumberLinearLayout"
                             app:layout_constraintTop_toBottomOf="@+id/cardNumberLinearLayout">
@@ -155,7 +155,7 @@
                                 android:fontFamily="@font/poppins"
                                 android:gravity="center_vertical"
                                 android:lineSpacingExtra="-1sp"
-                                android:text="Validity"
+                                android:text="Validity*"
                                 android:textColor="#2D2B32" />
 
                             <EditText
@@ -216,7 +216,7 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="14dp"
+                            android:layout_marginTop="2dp"
                             android:orientation="vertical"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/cardNumberLinearLayout">
@@ -228,7 +228,7 @@
                                 android:fontFamily="@font/poppins"
                                 android:gravity="center_vertical"
                                 android:lineSpacingExtra="-1sp"
-                                android:text="CVV"
+                                android:text="CVV*"
                                 android:textColor="#2D2B32" />
 
                             <EditText
@@ -319,7 +319,7 @@
                             android:fontFamily="@font/poppins"
                             android:gravity="center_vertical"
                             android:lineSpacingExtra="-1sp"
-                            android:text="Enter card number"
+                            android:text="Enter card number*"
                             android:textColor="#2D2B32"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/textView2" />
